updated file name and added employee table assignment

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <body>
         <h1>Exercise 6</h1>
         <h3>Brandon Wilson</h3>
-        <a href="./Week2/index.html">View Week 2</a><br>
-        <a href="./Week3/index.html">View Week 3</a><br>
+        <ul>
+            <li><a href="./form/form.html">View Form Assignment</a></li>
+            <li><a href="./speaker/speaker.html">View Speaker Assignment</a></li>
+            <li><a href="./table/table.html">View Employee Table Assignment</a></li>
+        </ul>
     </body>
 </html>
