--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <h1>Exercise 6</h1>
         <h3>Brandon Wilson</h3>
         <ul>
-            <li><a href="./form/form.html">View Form Assignment</a></li>
-            <li><a href="./speaker/speaker.html">View Speaker Assignment</a></li>
-            <li><a href="./table/table.html">View Employee Table Assignment</a></li>
+            <li><a href="./form/index.html">View Form Assignment</a></li>
+            <li><a href="./speaker/index.html">View Speaker Assignment</a></li>
+            <li><a href="./table/index.html">View Employee Table Assignment</a></li>
         </ul>
     </body>
 </html>
